--- a/index.html
+++ b/index.html
@@ -1,115 +1,146 @@
-<!DOCTYPE html><html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
-  <title>القنوات الرياضية</title>
-  <style>
-    :root{ --pad:28px; --gap:16px; --max-w:700px; --radius:20px; }
-    html,body{ margin:0; height:100%; background:#121212; color:#fafafa; font-family:system-ui,-apple-system,"Segoe UI",Roboto,"Noto Kufi Arabic","Noto Sans Arabic",Arial,sans-serif; }
-    .page{ min-height:100%; box-sizing:border-box; padding:var(--pad); display:flex; flex-direction:column; align-items:center; }
-    .stack{ width:min(100%,var(--max-w)); display:flex; flex-direction:column; gap:var(--gap); }
-    .tile{ display:block; border-radius:var(--radius); overflow:hidden; background:transparent; }
-    .thumb{ width:100%; height:auto; display:block; object-fit:cover; }
-  </style>
-</head>
+<!DOCTYPE html>
+<head><style>
+body {
+  background-color: #212121;
+}
+</style></head>
 <body>
-  <div class="page">
-    <main>
-      <div class="stack" role="list">
-        <!-- لافتة افتتاحية (صورة فقط) -->
-        <div class="tile"><img class="thumb" src="https://www4.0zz0.com/2024/02/01/09/100522793.png" alt="لافتة افتتاحية"/></div><!-- القنوات 1 - 5 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483688.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483688.m3u8" data-title="قناة 1"><img class="thumb" src="https://i.suar.me/VWaMw/l" alt="قناة 1"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483657.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483657.m3u8" data-title="قناة 2"><img class="thumb" src="https://i.suar.me/QJQKW/l" alt="قناة 2"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483660.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483660.m3u8" data-title="قناة 3"><img class="thumb" src="https://i.suar.me/9NjMe/l" alt="قناة 3"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483663.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483663.m3u8" data-title="قناة 4"><img class="thumb" src="https://i.suar.me/YJqzY/l" alt="قناة 4"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483667.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483667.m3u8" data-title="قناة 5"><img class="thumb" src="https://i.suar.me/7qOgo/l" alt="قناة 5"/></a>
 
-    <!-- لافتة وسط (صورة فقط) -->
-    <div class="tile"><img class="thumb" src="https://www4.0zz0.com/2024/02/01/09/194995613.png" alt="لافتة وسط"/></div>
+<h2 style="text-align:center;"><strong><span style="color: #fafafa;">القنوات الرياضيه - بث مباشر</span></strong></h2>
 
-    <!-- 6 - 10 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689531.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689531.m3u8" data-title="قناة 6"><img class="thumb" src="https://i.suar.me/za2GV/l" alt="قناة 6"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689534.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689534.m3u8" data-title="قناة 7"><img class="thumb" src="https://i.suar.me/ZPe4w/l" alt="قناة 7"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689535.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689535.m3u8" data-title="قناة 8"><img class="thumb" src="https://i.suar.me/XA56X/l" alt="قناة 8"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689536.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689536.m3u8" data-title="قناة 9"><img class="thumb" src="https://i.suar.me/GVzGg/l" alt="قناة 9"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689539.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689539.m3u8" data-title="قناة 10"><img class="thumb" src="https://i.suar.me/y2Lmq/l" alt="قناة 10"/></a>
+<center>
+<img border="0" src="https://www4.0zz0.com/2024/02/01/09/100522793.png" width="100%" height="100%">
+</a>
 
-    <!-- 11 - 14 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483669.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483669.m3u8" data-title="قناة 11"><img class="thumb" src="https://i.suar.me/edGM0/l" alt="قناة 11"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483672.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483672.m3u8" data-title="قناة 12"><img class="thumb" src="https://i.suar.me/OJea8/l" alt="قناة 12"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483675.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483675.m3u8" data-title="قناة 13"><img class="thumb" src="https://i.suar.me/jxBMz/l" alt="قناة 13"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/483678.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/483678.m3u8" data-title="قناة 14"><img class="thumb" src="https://i.suar.me/LV1xG/l" alt="قناة 14"/></a>
+<center><a href="go:1">
+<img border="0"  src="https://i.suar.me/VWaMw/l" width="100%" height="100%">
+</a>
 
-    <!-- لافتة (صورة فقط) -->
-    <div class="tile"><img class="thumb" src="https://i.suar.me/4aJYv/l" alt="لافتة"/></div>
+<center><a href="go:2">
+<img border="0" src="https://i.suar.me/QJQKW/l" width="100%" height="100%">
+</a>
 
-    <!-- 15 - 17 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689557.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689557.m3u8" data-title="قناة 15"><img class="thumb" src="https://i.suar.me/8e0yy/l" alt="قناة 15"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689559.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689559.m3u8" data-title="قناة 16"><img class="thumb" src="https://i.suar.me/32YWj/l" alt="قناة 16"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/689546.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/689546.m3u8" data-title="قناة 17"><img class="thumb" src="https://i.suar.me/oxe8O/l" alt="قناة 17"/></a>
+<center><a href="go:3">
+<img border="0" src="https://i.suar.me/9NjMe/l" width="100%" height="100%">
+</a>
 
-    <!-- لافتة (صورة فقط) -->
-    <div class="tile"><img class="thumb" src="https://i.suar.me/4aJYv/l" alt="لافتة"/></div>
+<center><a href="go:4">
+<img border="0" src="https://i.suar.me/YJqzY/l
+                     " width="100%" height="100%">
+</a>
 
-    <!-- 18 - 20 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69195.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/69195.m3u8" data-title="قناة 18"><img class="thumb" src="https://i.suar.me/GVl1N/l" alt="قناة 18"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/69196.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/69196.m3u8" data-title="قناة 19"><img class="thumb" src="https://i.suar.me/KXOPZ/l" alt="قناة 19"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/178390.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/178390.m3u8" data-title="قناة 20"><img class="thumb" src="https://i.suar.me/QJoZx/l" alt="قناة 20"/></a>
+<center><a href="go:5">
+<img border="0" src="https://i.suar.me/7qOgo/l" width="100%" height="100%">
+</a>
 
-    <!-- لافتة (صورة فقط) -->
-    <div class="tile"><img class="thumb" src="https://i.suar.me/QJoPW/l" alt="لافتة"/></div>
+<center><a href="go:11">
+<img border="0" src="https://i.suar.me/edGM0/l" width="100%" height="100%">
+</a>
 
-    <!-- 21 - 23 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222044.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/222044.m3u8" data-title="قناة 21"><img class="thumb" src="https://i.suar.me/nx59x/l" alt="قناة 21"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222045.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/222045.m3u8" data-title="قناة 22"><img class="thumb" src="https://i.suar.me/LVdjx/l" alt="قناة 22"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/222047.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/222047.m3u8" data-title="قناة 23"><img class="thumb" src="https://i.suar.me/8e0aO/l" alt="قناة 23"/></a>
+<center><a href="go:12">
+<img border="0" src="https://i.suar.me/OJea8/l" width="100%" height="100%">
+</a>
 
-    <!-- لافتة (صورة فقط) -->
-    <div class="tile"><img class="thumb" src="https://i.suar.me/rWdY7/l" alt="لافتة"/></div>
+<center><a href="go:13">
+<img border="0" src="https://i.suar.me/jxBMz/l" width="100%" height="100%">
+</a>
 
-    <!-- 24 - 25 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362201.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/362201.m3u8" data-title="قناة 24"><img class="thumb" src="https://i.suar.me/wWodN/l" alt="قناة 24"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/362204.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/362204.m3u8" data-title="قناة 25"><img class="thumb" src="https://i.suar.me/g8veK/l" alt="قناة 25"/></a>
+<center><a href="go:14">
+<img border="0" src="https://i.suar.me/LV1xG/l" width="100%" height="100%">
+</a>
 
-    <!-- لافتة (صورة فقط) -->
-    <div class="tile"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" alt="لافتة"/></div>
+<img border="0" src="https://www4.0zz0.com/2024/02/01/09/194995613.png" width="100%" height="100%">
+</a>
 
-    <!-- 26 - 28 -->
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763544.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/763544.m3u8" data-title="قناة 26"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" alt="قناة 26"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763547.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/763547.m3u8" data-title="قناة 27"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" alt="قناة 27"/></a>
-    <a class="tile" href="http://storatv.com/live/0543539887/2280625079/763550.m3u8" data-src="http://storatv.com/live/0543539887/2280625079/763550.m3u8" data-title="قناة 28"><img class="thumb" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" alt="قناة 28"/></a>
-  </div>
-</main>
+<center><a href="go:6">
+<img border="0" src="https://i.suar.me/za2GV/l" width="100%" height="100%">
+</a>
 
-  </div>  <script>
-  // اجعل الروابط تفتح مباشرة في VLC حسب المنصّة، بدون أي سقوط للرابط http داخل المتصفح
-  (function(){
-    const ua = navigator.userAgent || '';
-    const isAndroid = /Android/i.test(ua);
-    const isiOS = /iPhone|iPad|iPod/i.test(ua);
+<center><a href="go:7">
+<img border="0" src="https://i.suar.me/ZPe4w/l" width="100%" height="100%">
+</a>
+  
+<center><a href="go:8">
+<img border="0" src="https://i.suar.me/XA56X/l" width="100%" height="100%">
+</a>
 
-    document.querySelectorAll('a.tile[data-src]').forEach(a => {
-      const src = a.getAttribute('data-src');
-      let href;
-      if(isAndroid){
-        // صيغة intent الرسمية لكروم أندرويد لفتح VLC مباشرة
-        try {
-          const u = new URL(src);
-          href = `intent://${u.host}${u.pathname}${u.search}` +
-                 `#Intent;scheme=${u.protocol.replace(':','')};package=org.videolan.vlc;end`;
-        } catch { href = `intent://${src.replace(/^https?:\/\//,'')}` + `#Intent;scheme=http;package=org.videolan.vlc;end`; }
-      } else if(isiOS){
-        // مخطط VLC على iOS
-        href = `vlc-x-callback://x-callback-url/stream?url=${encodeURIComponent(src)}`;
-      } else {
-        // سطح المكتب (قد يتطلب تسجيل البروتوكول مع النظام)
-        href = `vlc://${src}`;
-      }
-      a.setAttribute('href', href);
-      a.removeAttribute('target');
-      a.removeAttribute('type');
-      a.onclick = null; // تأكيد عدم وجود منع افتراضي
-    });
-  })();
-</script></body>
+<center><a href="go:9">
+<img border="0" src="https://i.suar.me/GVzGg/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:10">
+<img border="0" src="https://i.suar.me/y2Lmq/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:15">
+<img border="0" src="https://i.suar.me/8e0yy/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:16">
+<img border="0" src="https://i.suar.me/32YWj/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:17">
+<img border="0" src="https://i.suar.me/oxe8O/l" width="100%" height="100%">
+</a>
+
+<img border="0" src="https://i.suar.me/4aJYv/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:18">
+<img border="0" src="https://i.suar.me/GVl1N/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:19">
+<img border="0" src="https://i.suar.me/KXOPZ/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:20">
+<img border="0" src="https://i.suar.me/QJoZx/l" width="100%" height="100%">
+</a>
+
+<img border="0" src="https://i.suar.me/QJoPW/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:21">
+<img border="0" src="https://i.suar.me/nx59x/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:22">
+<img border="0" src="https://i.suar.me/LVdjx/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:23">
+<img border="0" src="https://i.suar.me/8e0aO/l" width="100%" height="100%">
+</a>
+
+<img border="0" src="https://i.suar.me/rWdY7/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:24">
+<img border="0" src="https://i.suar.me/wWodN/l" width="100%" height="100%">
+</a>
+
+<center><a href="go:25">
+<img border="0" src="https://i.suar.me/g8veK/l" width="100%" height="100%">
+</a>
+
+<img border="0" src="https://www2.0zz0.com/2025/08/23/04/489277181.png" width="100%" height="100%">
+</a>
+
+<center><a href="go:26">
+<img border="0" src="https://www2.0zz0.com/2025/08/23/04/812637220.png" width="100%" height="100%">
+</a>
+
+<center><a href="go:27">
+<img border="0" src="https://www2.0zz0.com/2025/08/23/04/480587354.png" width="100%" height="100%">
+</a>
+
+<center><a href="go:28">
+<img border="0" src="https://www2.0zz0.com/2025/08/23/04/738428476.png" width="100%" height="100%">
+</a>
+
+<h2 style="text-align:center;"><strong><span style="color: #fafafa;"> Abu Faris TV Sport </span></strong></h2>
+
+</body>
 </html>
